add checkbox content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <h1 id="title">Survey Form</h1>
-            <p id="description">[insert survey description here]</p>
+            <p id="description">Help up understand your listening habits better</p>
         </header>
         <form id="survey-form">
             <div class="form-group">
@@ -32,7 +32,7 @@
                 </select><br>
             </div>
             <div class="form-group">
-                <h2>[insert multiple choice question here]</h2>
+                <h2>How often do you listen to music?</h2>
                 <label for="A">
                     <input id="A" type="radio" name="a-b-c" value="A">A
                 </label>
@@ -44,15 +44,48 @@
                 </label>
             </div>
             <div class="form-group">
-                <h2>[insert checkbox question here]</h2>
-                <label for="d">
-                    <input id="d" type="checkbox" name="d-e-f" value="d">D
+                <h2>What genres of music do you listen to?</h2>
+                <label for="pop">
+                    <input id="pop" type="checkbox" name="genre" value="pop">Pop
                 </label>
-                <label for="e">
-                    <input id="e" type="checkbox" name="d-e-f" value="e">E
+                <label for="rock">
+                    <input id="rock" type="checkbox" name="genre" value="rock">Rock
                 </label>
-                <label for="f">
-                    <input id="f" type="checkbox" name="d-e-f" value="f">F
+                <label for="hip-hop">
+                    <input id="hip-hop" type="checkbox" name="genre" value="hip-hop">Hip Hop
+                </label>
+                <label for="laitn">
+                    <input id="laitn" type="checkbox" name="genre" value="laitn">Latin
+                </label>
+                <label for="dance/electronic">
+                    <input id="dance/electronic" type="checkbox" name="genre" value="dance/electronic">Dance/Electronic
+                </label>
+                <label for="r&b">
+                    <input id="r&b" type="checkbox" name="genre" value="r&b">R&B
+                </label>
+                <label for="country">
+                    <input id="country" type="checkbox" name="genre" value="country">Country
+                </label>
+                <label for="folk/acoustic">
+                    <input id="folk/acoustic" type="checkbox" name="genre" value="folk/acoustic">Folk/Acoustic
+                </label>
+                <label for="classical">
+                    <input id="classical" type="checkbox" name="genre" value="classical">Classical
+                </label>
+                <label for="metal">
+                    <input id="metal" type="checkbox" name="genre" value="metal">Metal
+                </label>
+                <label for="jazz">
+                    <input id="jazz" type="checkbox" name="genre" value="jazz">Jazz
+                </label>
+                <label for="easy-listening">
+                    <input id="easy-listening" type="checkbox" name="genre" value="easy-listening">Easy Listening
+                </label>
+                <label for="new-age">
+                    <input id="new-age" type="checkbox" name="genre" value="new-age">New Age
+                </label>
+                <label for="world/traditional">
+                    <input id="world/traditional" type="checkbox" name="genre" value="world/traditional">World/Traditional
                 </label>
             </div>
             <div class="form-group">
